# measurement_experamentation

./: .gitignore  pyproject.toml  run.sh  sessions.db
backend/: database.py  main.py
backend/adapters/: __init__.py  llm_adapter.py  session_repository.py
backend/graph/: edges.py  graph.py  nodes.py  setup_edges.py  setup_graph.py  setup_nodes.py  setup_state.py  state.py
backend/methods/: __init__.py  ab_test.py  base.py  matched_market.py  synthetic_control.py
backend/output/: scaffold.py
backend/prompts/: questions.py  setup_prompts.py  system.py
backend/scoring/: scorer.py
backend/simulation/: __init__.py
frontend/: Home.py  app_old.py  shared.py
frontend/pages/: 1_Elicitation_Chat.py  2_Design_Report.py  3_Method_Setup.py  4_Simulation_Results.py  5_Data_Templates.py  6_FAQ_Chat.py
measurement_design/: __init__.py  models.py  ports.py  types.py
measurement_design/knowledge/: __init__.py  assumptions.py  red_flags.py  schemas.py  topics.py
measurement_design/methods/: __init__.py  base.py  ddml.py  did.py  geo_lift.py
measurement_design/output/: __init__.py  report.py  spec.py
measurement_design/prompts/: __init__.py  questions.py  setup_prompts.py  system.py
measurement_design/scoring/: __init__.py  scorer.py
measurement_design/simulation/: __init__.py  mde.py  power.py  synthetic.py
measurement_design/validation/: __init__.py  feasibility.py
measurement_design/workflow/: __init__.py  elicitation.py  setup.py  transitions.py
